Applied 'preserve3d' to counter class Stops weird clipping issue with FF on iMac

--- a/_assets/custom.css
+++ b/_assets/custom.css
@@ -128,6 +128,7 @@ h1 {
     .counter {
         width: 5vw;
         height: 5vw;
+        transform-style: preserve-3d;
     }
 
 
